--- a/core/components/captcha/docs/changelog.txt
+++ b/core/components/captcha/docs/changelog.txt
@@ -1,5 +1,9 @@
 Changelog for Captcha.
 
+Captcha 3.3.4-pl
+----------------
+Fix critical bug in v. 3.3.3
+
 Captcha 3.3.2-pl
 ----------------
 Documentation corrections
@@ -11,17 +15,17 @@ Update for MODX 2.3
 
 Captcha 3.3.1-pl
 ----------------
- - More reliable uninstall
- - Added NL translation
- - Fix bug with plugin remaining in cache after uninstall
- - Remove Captcha System Settings on uninstall
+More reliable uninstall
+Added NL translation
+Fix bug with plugin remaining in cache after uninstall
+Remove Captcha System Settings on uninstall
 
 Captcha 3.3.0-pl
 ----------------
- - Fixed bug with session var not being written
+Fixed bug with session var not being written
     (fixes intermittent Captcha failure - Thanks to Garry Nutting!)
- - Added German Lexicon files
- - Minor bug fixes
+Added German Lexicon files
+Minor bug fixes
 
 Captcha 3.2.5
 -------------
@@ -29,44 +33,44 @@ Added Spanish language files
 
 Captcha 3.2.4
 -------------
- - Fixed bug with failed validator
+Fixed bug with failed validator
 
 Captcha 3.2.3
 -------------
- - Fixed bug in Transport Package
+Fixed bug in Transport Package
 
 Captcha 3.2.2
 -------------
- - Updated PhpDoc comments
- - Added changelog.txt
- - Added readme.md
- - Reorganized for Git
- - Revolution Transport Package updated
- - Converted tabs to spaces
+Updated PhpDoc comments
+Added changelog.txt
+Added readme.md
+Reorganized for Git
+Revolution Transport Package updated
+Converted tabs to spaces
 
 Captcha 3.2.1
 -------------
- - Test for Necessary GD and FreeType functions on install
+Test for Necessary GD and FreeType functions on install
 
 Captcha 3.1.0
 -------------
- - Updated for Revolution RC3
- - Fixed bug with captcha words
- - Converted $modx->config calls to getOption()
+Updated for Revolution RC3
+Fixed bug with captcha words
+Converted $modx->config calls to getOption()
 
 Captcha 3.0.3
 -------------
- - Fixed bugs in build script
- - Moved target directory
- - Added license and readme
+Fixed bugs in build script
+Moved target directory
+Added license and readme
 
  Captcha 3.0.2
  -------------
- - $_SESSION mathstring value can override system setting
- - Updates to build script
+$_SESSION mathstring value can override system setting
+Updates to build script
 
  Captcha 3.0.1
  -------------
- - First Revolution release
+First Revolution release
 
 
